fs/search-module: add binary search